--- a/test/tools/WebListener/Views/Home/Index.cshtml
+++ b/test/tools/WebListener/Views/Home/Index.cshtml
@@ -3,4 +3,5 @@
     <li><a href="/">/</a> - This page</li>
     <li><a href="/Cert/">/Cert/</a> - Client Certificate Details</li>
     <li><a href="/Get/">/Get/</a> - Emulates functionality of https://httpbin.org/get by returning GET headers, Arguments, and Request URL</li>
+    <li><a href="/Multipart/">/Multipart/</a> - Multipart/form-data submission testing</li>
 </ul>
