--- a/assets/Product.wxs
+++ b/assets/Product.wxs
@@ -60,15 +60,27 @@
 
     <!--We need to show EULA, and provide option to customize download location-->        
     <Property Id="WIXUI_INSTALLDIR" Value="INSTALLFOLDER" />
-	
-    <!-- Prerequisites check for Windows Universal C time and Visual Studio 2015 C++ redistributables -->
-    <Property Id="UCRTINSTALLED" Secure="yes">
-      <DirectorySearch Id="Windows_System32" Path="[WindowsFolder]System32" Depth="0">
-        <FileSearch Name="ucrtbase.dll"/>
+
+    <!-- Prerequisite check for Windows Universal C runtime -->
+    <Property Id="UNIVERSAL_C_RUNTIME_INSTALLED" Secure="yes">
+      <DirectorySearch Id="WindowsDirectory" Path="[WindowsFolder]">
+        <DirectorySearch Id="System32" Path="System32">
+          <FileSearch Id="ucrtbase" Name="ucrtbase.dll"/>
+        </DirectorySearch>
       </DirectorySearch>
     </Property>	
-    <Condition Message="$(env.ProductName) requires the Universal C Runtime to be installed. You can download it here: https://www.microsoft.com/download/details.aspx?id=50410">
-      <![CDATA[Installed OR UCRTINSTALLED]]>
+    <Condition Message="$(env.ProductName) requires the Universal C Runtime to be installed. You can find a download link to it here: https://github.com/PowerShell/PowerShell/blob/master/docs/installation/windows.md#prerequisites">
+      <![CDATA[Installed OR UNIVERSAL_C_RUNTIME_INSTALLED]]>
+    </Condition>
+
+     <!-- Prerequisite check for Visual Studio 2015 C++ redistributables -->
+     <Property Id="VISUAL_CPP_RUNTIME_INSTALLED" Secure="yes">
+      <DirectorySearchRef Id="System32" Parent="WindowsDirectory" Path="System32">
+        <FileSearch Id="vcruntime140" Name="vcruntime140.dll"/>
+      </DirectorySearchRef>
+    </Property>	
+    <Condition Message="$(env.ProductName) requires the Visual Studio 2015 C++ redistributables to be installed. You can find a download link to it here: https://github.com/PowerShell/PowerShell/blob/master/docs/installation/windows.md#prerequisites">
+      <![CDATA[Installed OR VISUAL_CPP_RUNTIME_INSTALLED]]>
     </Condition>
 
     <Directory Id="TARGETDIR" Name="SourceDir">
